--- a/Week Two Css/Day_04/Day_04.css
+++ b/Week Two Css/Day_04/Day_04.css
@@ -1,194 +1,183 @@
 :root {
-  
-    --secondary: #54595f;
-    --theme: rgb(73, 45, 49);
-    --main:#000000;
-    --primary:rgb(243, 123, 131);
-    --text: #a88590;
-    --background:rgb(249, 240, 255);
-    --font-family-base:  "Poppins", sans-serif;
-    --font-family-title:"Nanum Gothic", sans-serif;
-    --font-size-small: 1rem;
-    --font-size-medium: 2rem;
-    --font-size-large:6rem;
-    --font-weight-regular: 400;
-    --font-weight-bold: 700;
-    --font-weight-bolder: 900;
-    --line-height-small: 1.2;
-    --line-height-base: 2rem;
-    --line-height-big: 1.8;
-    --border-raduis :  10px;
-  }
-
-  *{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-  }
-  html {
-    scroll-behavior: smooth;
-  }
-  
-  body {
-    max-width: 100%;
-    max-height: 100vh;
-    font-family: var(--font-family-base);
-    font-weight: 400;
-  }
-  
-  a {
-    text-decoration: none;
-  }
-  
-  ul {
-    list-style: none;
-  }
-  /*************nav*****************************/
-
-  .wrapper{
-    display: flex;
-    position: relative;
-  }
-  
-  .wrapper .sidebar{
-    width: 100%;
-    height: 100vh;
-    background-color :var(--theme);
-    position: fixed;
-  }
-  
-  .wrapper .sidebar ul{
-    display: flex;
-    flex-direction: row;
-    margin:  100px 20px;
-  }    
-  .wrapper .sidebar ul li a{
-    color: var(--background);
-     margin: 10px;
-    text-transform: capitalize;
-  }
-  .active{
-    color: var(--primary);
-   
-  }
-  .wrapper .sidebar ul li:hover a{
-    text-decoration: underline;
-    color: var(--primary);
-  }
-.contaienr-details{
- margin-left: 30px;
- text-transform: capitalize;
- color: var(--background);
- }
- .contaienr-details .name,
-   .contaienr-details .role,
-    .contaienr-details .email, .contaienr-details .phone{
-      margin-bottom: 20px;
-      line-height: var(--line-height-base);
- }
-.contaienr-details h1{
-     text-transform: uppercase;
-     color: var(--primary);
-     font-family: var(--font-family-title);
-     font-weight: var(--font-weight-regular);
-     font-size: var(--font-size-small);
+  --secondary: #54595f;
+  --theme: rgb(73, 45, 49);
+  --main: #000000;
+  --primary: rgb(243, 123, 131);
+  --text: #a88590;
+  --background: rgb(249, 240, 255);
+  --font-family-base: 'Poppins', sans-serif;
+  --font-family-title: 'Nanum Gothic', sans-serif;
+  --font-size-small: 1rem;
+  --font-size-medium: 2rem;
+  --font-size-large: 6rem;
+  --font-weight-regular: 400;
+  --font-weight-bold: 700;
+  --font-weight-bolder: 900;
+  --line-height-small: 1.2;
+  --line-height-base: 2rem;
+  --line-height-big: 1.8;
+  --border-raduis: 10px;
 }
-.contaienr-details .sign img{
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  max-width: 100%;
+  max-height: 100vh;
+  font-family: var(--font-family-base);
+  font-weight: 400;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+/*************nav*****************************/
+
+.wrapper {
+  display: flex;
+  position: relative;
+}
+
+.wrapper .sidebar {
+  width: 100%;
+  height: 100vh;
+  background-color: var(--theme);
+  position: fixed;
+}
+
+.wrapper .sidebar ul {
+  display: flex;
+  flex-direction: row;
+  margin: 100px 20px;
+}
+.wrapper .sidebar ul li a {
+  color: var(--background);
+  margin: 10px;
+  text-transform: capitalize;
+}
+.active {
+  color: var(--primary);
+}
+.wrapper .sidebar ul li:hover a {
+  text-decoration: underline;
+  color: var(--primary);
+}
+.contaienr-details {
+  margin-left: 30px;
+  text-transform: capitalize;
+  color: var(--background);
+}
+.contaienr-details .name,
+.contaienr-details .role,
+.contaienr-details .email,
+.contaienr-details .phone {
+  margin-bottom: 20px;
+  line-height: var(--line-height-base);
+}
+.contaienr-details h1 {
+  text-transform: uppercase;
+  color: var(--primary);
+  font-family: var(--font-family-title);
+  font-weight: var(--font-weight-regular);
+  font-size: var(--font-size-small);
+}
+.contaienr-details .sign img {
   width: 200px;
 }
 
 /*MainContent>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
 /*************************section One Content******************/
-   .content{
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    left:25%;
-    height: 120vh;
-
-  }
-  .content .container{
-    display: flex;
-    justify-content: space-between;
-    height: 120vh;
-
-      }
-  .content-items{
-    width: 100%;
-    background-color:var(--background);   
-    padding:  0 100px;
-   
- }
-.content-items h1{
+.content {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  left: 25%;
+  height: 120vh;
+}
+.content .container {
+  display: flex;
+  justify-content: space-between;
+  height: 120vh;
+}
+.content-items {
+  width: 100%;
+  background-color: var(--background);
+  padding: 0 100px;
+}
+.content-items h1 {
   color: var(--theme);
   margin-top: 30px;
   font-size: var(--font-size-medium);
   font-weight: var(--font-weight-regular);
-
 }
-.content-items h2{
+.content-items h2 {
   color: var(--primary);
   font-size: var(--font-size-large);
- text-transform: capitalize;
+  text-transform: capitalize;
   line-height: 90px;
   margin-top: 40px;
 }
-.content-items p{
+.content-items p {
   color: var(--text);
-   margin-top: 40px;
-   font-size: 1.4;
-   
+  margin-top: 40px;
+  font-size: 1.4;
 }
 .content-items .links {
   margin-top: 50px;
   text-transform: uppercase;
   margin-bottom: 50px;
-  
 }
-.content-items .links a{
+.content-items .links a {
   color: var(--theme);
   letter-spacing: 0.2ch;
   margin-left: 13px;
-  
 }
-.content-items .links a:hover{
+.content-items .links a:hover {
   color: var(--text);
 }
- .contet-img{
-    background-image: url(../images/home.jpg);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-  }
+.contet-img {
+  background-image: url(../images/home.jpg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+}
 /*************************section Two Service*******************/
-  .service{
-      background-color: rgba(0, 0, 0, 0.531);
-      width: 100%;
-      position:relative;
-    
-  }
- .service .container{
+.service {
+  background-color: rgba(0, 0, 0, 0.531);
+  width: 100%;
+  position: relative;
+}
+.service .container {
   height: 170vh;
- }
-    .service .row{
-      max-width: 100%;
-        display: flex;
-         
- }
+}
+.service .row {
+  max-width: 100%;
+  display: flex;
+}
 
- .service .col{
+.service .col {
   margin-top: 80px;
-  
- }
- .service .cards{
+}
+.service .cards {
   width: 50%;
   display: flex;
-   flex-direction: column;
-  justify-content: space-around 
- }  
- .card{
+  flex-direction: column;
+  justify-content: space-around;
+}
+.card {
   text-transform: capitalize;
   display: flex;
   flex-direction: column;
@@ -198,90 +187,91 @@
   padding: 20px;
   border-radius: 10px;
   width: 220px;
-   height: 60vh;
-   margin-left: 40px;
-   -webkit-border-radius: 10px;
+  height: 60vh;
+  margin-left: 40px;
+  -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
-  box-shadow:  6px 6px 0px #00000033;;
+  box-shadow: 6px 6px 0px #00000033;
 }
- .col img{
+.col img {
   vertical-align: middle;
-   width: 50%;
- }
- .col h3{
+  width: 50%;
+}
+.col h3 {
   color: var(--primary);
   font-size: var(--font-size-medium);
- }
+}
 
- .col p{
+.col p {
   color: var(--text);
   font-size: 13px;
- }
-#service-side{
+}
+#service-side {
   text-transform: capitalize;
   display: flex;
   flex-direction: column;
   width: 50%;
   align-items: flex-start;
   justify-content: space-around;
-   line-height: 20px;
- 
+  line-height: 20px;
 }
-#service-side .first-p{
+#service-side .first-p {
   font-size: var(--font-size-small);
   font-family: var(--font-family-title);
-   font-weight: var(--font-weight-bolder);
-   line-height: var(--line-height-big);
-   
+  font-weight: var(--font-weight-bolder);
+  line-height: var(--line-height-big);
 }
-.btn-2{margin-bottom: 30px;}
-.btn-1{margin-bottom: -30px;}
+.btn-2 {
+  margin-bottom: 30px;
+}
+.btn-1 {
+  margin-bottom: -30px;
+}
 
+.btn-1,
+.btn-2 {
+  border: 2px solid var(--primary);
+  border-radius: 50px;
+  box-sizing: border-box;
+  color: var(--background);
+  cursor: pointer;
+  display: inline-block;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif;
+  font-size: var(--font-size-small);
+  font-family: var(--font-family-title);
+  padding: 23px 23px;
+  text-align: center;
+  width: 60%;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+}
+.btn-1:hover,
+.btn-2:hover {
+  background-color: var(--primary);
+}
 
-  .btn-1, .btn-2 {
-    border: 2px solid var(--primary);
-    border-radius: 50px;
-    box-sizing: border-box;
-    color: var(--background);
-    cursor: pointer;
-    display: inline-block;
-    font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,"Helvetica Neue",sans-serif;
-    font-size: var(--font-size-small);
-    font-family: var(--font-family-title);
-    padding: 23px 23px;
-    text-align: center;
-    width: 60%;
-    -webkit-border-radius: 50px;
-    -moz-border-radius: 50px;
-    -ms-border-radius: 50px;
-    -o-border-radius: 50px;
-}  
-  .btn-1:hover , .btn-2:hover{
-    background-color: var(--primary);
-
-  }
-  
- /*************************section Three *******************/
-.skills{
+/*************************section Three *******************/
+.skills {
   background-color: rgba(0, 0, 0, 0.531);
   width: 100%;
   height: 100vh;
-
 }
-.skills .row{
+.skills .row {
   display: flex;
   flex-direction: row;
   width: 100%;
   justify-content: flex-start;
   margin-left: 20px;
   padding: 20px;
-
 }
-.skills h1{
+.skills h1 {
   color: var(--primary);
-  margin-left:23px ;
+  margin-left: 23px;
   font-weight: var(--font-weight-bolder);
   font-size: var(--font-size-medium);
   line-height: 1;
@@ -290,78 +280,66 @@
   margin-left: 5%;
 }
 
-.pro
-{
-  width:200px;
-  height:300px;
-  display:flex;
-  position:relative;
+.pro {
+  width: 200px;
+  height: 300px;
+  display: flex;
+  position: relative;
   align-items: center;
   justify-content: space-around;
-  flex-direction:column;
-  transition: transform .2s;
-  -webkit-transition: transform .2s;  
-  -moz-transition: transform .2s;
-  -ms-transition: transform .2s;
-  -o-transition: transform .2s;
+  flex-direction: column;
+  transition: transform 0.2s;
+  -webkit-transition: transform 0.2s;
+  -moz-transition: transform 0.2s;
+  -ms-transition: transform 0.2s;
+  -o-transition: transform 0.2s;
   margin-left: 23px;
-  
 }
-.percent
-{
-  width:150px;
-  height:150px;
-  position:relative;
+.percent {
+  width: 150px;
+  height: 150px;
+  position: relative;
 }
-.pro .percent svg
-{
-  width:150px;
-  height:150px;
-  position:relative;
+.pro .percent svg {
+  width: 150px;
+  height: 150px;
+  position: relative;
 }
-.pro .percent svg circle
-{
-  width:150px;
-  height:150px;
-  fill:none;
-  stroke-width:10;
-  stroke:var(--p);
-  transform:translate(5px,5px);
-  stroke-dasharray:440;
-  stroke-dashoffset:440;
-  stroke-linecap:round;
-  -webkit-transform:translate(5px,5px);
-  -moz-transform:translate(5px,5px);
-  -ms-transform:translate(5px,5px);
-  -o-transform:translate(5px,5px);
+.pro .percent svg circle {
+  width: 150px;
+  height: 150px;
+  fill: none;
+  stroke-width: 10;
+  stroke: var(--p);
+  transform: translate(5px, 5px);
+  stroke-dasharray: 440;
+  stroke-dashoffset: 440;
+  stroke-linecap: round;
+  -webkit-transform: translate(5px, 5px);
+  -moz-transform: translate(5px, 5px);
+  -ms-transform: translate(5px, 5px);
+  -o-transform: translate(5px, 5px);
 }
-.pro .percent svg circle:nth-child(1)
-{
-  stroke-dashoffset:0;
-  stroke:var(--background);
+.pro .percent svg circle:nth-child(1) {
+  stroke-dashoffset: 0;
+  stroke: var(--background);
 }
-.pro .percent svg circle:nth-child(2)
-{
-  stroke-dashoffset:calc(440 - (440 * 87) / 100);
-  stroke:var(--primary);
+.pro .percent svg circle:nth-child(2) {
+  stroke-dashoffset: calc(440 - (440 * 87) / 100);
+  stroke: var(--primary);
 }
 
-.pro-2 .percent svg circle:nth-child(2)
-{
-  stroke-dashoffset:calc(440 - (440 * 70) / 100);
+.pro-2 .percent svg circle:nth-child(2) {
+  stroke-dashoffset: calc(440 - (440 * 70) / 100);
 }
-.pro-3 .percent svg circle:nth-child(2)
-{
-  stroke-dashoffset:calc(440 - (440 * 50) / 100);
+.pro-3 .percent svg circle:nth-child(2) {
+  stroke-dashoffset: calc(440 - (440 * 50) / 100);
 }
 
-.pro-4 .percent svg circle:nth-child(2)
-{
-  stroke-dashoffset:calc(440 - (440 * 90) / 100);
-
+.pro-4 .percent svg circle:nth-child(2) {
+  stroke-dashoffset: calc(440 - (440 * 90) / 100);
 }
-.pro .percent .num
-{
+.pro .percent .num {
   position: absolute;
   left: 50%;
   top: 50%;
@@ -375,16 +353,13 @@
   -ms-transform: translate(-50%, -50%);
   -o-transform: translate(-50%, -50%);
 }
-.pro .percent .num h2
-{
-  font-size:48px;
+.pro .percent .num h2 {
+  font-size: 48px;
 }
-.pro .percent .num h2 span
-{
-  font-size:24px;
+.pro .percent .num h2 span {
+  font-size: 24px;
 }
-.pro .text
-{
+.pro .text {
   font-size: 22px;
   color: #f37b83;
   text-align: center;
@@ -393,92 +368,86 @@
   margin-bottom: 0;
 }
 
- /*************************section four *******************/
+/*************************section four *******************/
 
-.contact{
+.contact {
   background-color: rgba(0, 0, 0, 0.531);
   width: 100%;
   height: 100vh;
 }
-.contact .conatiner{
+.contact .conatiner {
   width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: row;
 }
-.col-cont{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    color:var(--text);
-    margin-left: 30px;
-  }
-  .col-cont h2{
-    color: var(--primary);
-    font-size: var(--font-size-medium);
-  }
-  .col-cont p{
-    font-size: 1rem;
-    width: 400px;
-    font-weight: var(--font-weight-regular);
-  }
-.col-form{
+.col-cont {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  color: var(--text);
+  margin-left: 30px;
+}
+.col-cont h2 {
+  color: var(--primary);
+  font-size: var(--font-size-medium);
+}
+.col-cont p {
+  font-size: 1rem;
+  width: 400px;
+  font-weight: var(--font-weight-regular);
+}
+.col-form {
   width: 50%;
   margin-left: 40px;
 }
-  .col-form .container-2{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 95%;
-    margin-top: 20px;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    background-color:var(--primary); 
-    box-shadow: 0 4px 10px var(--theme)
-
-   
-  }
-  form{
-    display: flex;
-    flex-direction:column;
-    justify-content: space-around;
-    width: 100%; 
-    height: 100%;
-    
-    
-  }
-  input[type="text"],
-  input[type="email"],
-  textarea {
-    text-transform: capitalize;
-    font-family: var(--font-family-title);
-    font-size: var(--font-size-small);
-    line-height: 25px;
-    color: var(--background);
-    background-color: transparent;
-    width: 100%;
-    height: 28px;
-    border: 0;
-    border-bottom: 2px solid var(--background);
-    padding-bottom: 15px;
-    margin-bottom: 20px;
-   
+.col-form .container-2 {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 95%;
+  margin-top: 20px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  background-color: var(--primary);
+  box-shadow: 0 4px 10px var(--theme);
 }
-input::placeholder, textarea::placeholder{
-  color:var(--background);
-}  
-
-
-input[type="text"]:focus,
-input[type="email"]:focus,
-  textarea:focus{
-    outline: none;
-    
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 100%;
+  height: 100%;
 }
-  
-  input[type="submit"] {
+input[type='text'],
+input[type='email'],
+textarea {
+  text-transform: capitalize;
+  font-family: var(--font-family-title);
+  font-size: var(--font-size-small);
+  line-height: 25px;
+  color: var(--background);
+  background-color: transparent;
+  width: 100%;
+  height: 28px;
+  border: 0;
+  border-bottom: 2px solid var(--background);
+  padding-bottom: 15px;
+  margin-bottom: 20px;
+}
+input::placeholder,
+textarea::placeholder {
+  color: var(--background);
+}
+
+input[type='text']:focus,
+input[type='email']:focus,
+textarea:focus {
+  outline: none;
+}
+
+input[type='submit'] {
   background-color: var(--primary);
   border: 2px solid var(--background);
   color: var(--background);
@@ -486,21 +455,73 @@ input[type="email"]:focus,
   border-radius: 4px;
   cursor: pointer;
   font-size: var(--background);
-   transition: background-color 0.3s;
-   font-weight: var(--font-weight-bold);
-   letter-spacing: 0.3rem;
-  }
-  input[type="submit"]:hover {
-    transition: background-color 0.3s;
-    -webkit-transition: background-color 0.3s;
-    -moz-transition: background-color 0.3s;
-    -ms-transition: background-color 0.3s;
-    -o-transition: background-color 0.3s;
+  transition: background-color 0.3s;
+  font-weight: var(--font-weight-bold);
+  letter-spacing: 0.3rem;
+  -webkit-transition: background-color 0.3s;
+  -moz-transition: background-color 0.3s;
+  -ms-transition: background-color 0.3s;
+  -o-transition: background-color 0.3s;
 }
-.footer{
+input[type='submit']:hover {
+  transition: background-color 0.3s;
+  -webkit-transition: background-color 0.3s;
+  -moz-transition: background-color 0.3s;
+  -ms-transition: background-color 0.3s;
+  -o-transition: background-color 0.3s;
+}
+.footer {
   height: 100vh;
   position: relative;
   width: 100%;
   padding: 100px;
   background-color: rgba(0, 0, 0, 0.531);
+}
+
+/***********************tablet screen*****************/
+@media (max-width: 768px) {
+  .wrapper {
+    flex-direction: column;
+  }
+
+  .wrapper .sidebar {
+    height: auto;
+    position: relative;
+    width: 100%;
+  }
+
+  .content {
+    left: 0;
+    height: auto;
+    width: 100%;
+  }
+
+  .content .container {
+    flex-direction: column;
+  }
+
+  .content-items {
+    padding: 0 20px;
+  }
+
+  .service .cards {
+    width: 100%;
+  }
+  .service .card {
+    height: 40vh;
+  }
+  .service p {
+    font-size: 12px;
+    width: 100%;
+  }
+  .service .btn-1,
+  .btn-2 {
+    margin-bottom: 0;
+    width: 100%;
+    margin-top: 20px;
+  }
+  .contact .col-form {
+    width: 100%;
+    margin-left: 0;
+  }
 }
