--- a/Week Two Css/Day_06/Day_06.css
+++ b/Week Two Css/Day_06/Day_06.css
@@ -3,188 +3,416 @@
     --primary: #00B98E;
     --secondary: #FF6922;
     --light: #EFFDF5;
-    --dark: #0E2E50;
+    --background: #000;
       --font-family-base: "Heebo", sans-serif;;
     --font-family-title:"Inter", sans-serif;;
     --font-size-small: 1.5rem;
     --font-size-medium: 2rem;
-    --font-size-large: 3.5rem;
+    --font-size-large: 3rem;
     --font-weight-regular: 400;
     --font-weight-bold: 900;
     --line-height-small: 1.2;
-    --line-height-base: 1.5;
+    --line-height-base: 1.7;
     --line-height-big: 1.8;
     --border-raduis :  10px;
-  }
+}
 
-  html {
-    scroll-behavior: smooth;
-    font-size: 62.5%;
-  }
-  
-  body {
-    margin: 0;
-    padding: 0;
-    max-width: 100%;
-    max-height: 100vh;
-    color: var(--text-color);
-    background: var(--background);
-    font-family: var(--font-family-base);
-    font-size: var(--font-size-small);
-    font-weight: var(--font-weight-regular);
-    line-height: var(--line-height-base);
-  }
-  
-  a {
-    text-decoration: none;
-  }
-  
-  ul {
-    list-style: none;
-    margin: 0 auto;
-    padding: 3rem;
-  }
-  
-  ul li {
-    display: inline-block;
-    padding: 1rem;
-  }
-  /*******************************************/
-.title{
-    color: var(--secondary);
-    text-decoration: underline;
-    font-size: var(--font-size-large);
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
 }
-section {
-    padding: 10px;
-    font-size: 20px;
-    text-align: center;
-    background: var(--light);
-  }
-  
-.lt-col{
-    float: left;
-    width: 40%;
-    padding-left: 20px;
-    border: 2px solid var(--primary);
-    border-radius: var(--border-raduis);
-    -webkit-border-radius: var(--border-raduis);
-    -moz-border-radius: var(--border-raduis);
-    -ms-border-radius: var(--border-raduis);
-    -o-border-radius: var(--border-raduis);
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
 }
-  
-.rt-col {
-    float: left;
-    width: 50%;
-    padding-left: 20px;
-    margin-top: 20%;
-    
-  }
-img {
-    width: 100%;
-    padding: 0px;
-  }
-  
-  .card {
-    background-color: var(--light);
-    padding: 20px;
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  font-size: var(--font-size-small);
+  font-family: var(--font-family-base);
+  font-weight: var(--font-weight-regular);
+   line-height :var (var(--line-height-base));
+  color: var(--light);
+  background: var(--background);
+}
+
+.u-center-text {
+  text-align: center !important;
+}
+.u-margin-bottom-small {
+  margin-bottom: 1.5rem !important;
+}
+.u-margin-bottom-medium {
+  margin-bottom: 4rem !important;
+}
+.u-margin-top-big {
+  margin-top: 5rem !important;
+}
+.heading-primary {
+   text-transform: uppercase;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  margin-bottom: 6rem;
+}
+
+.heading-primary--main {
+  display: block;
+  font-size: 6rem;
+  font-weight: 400;
+  letter-spacing: 3.5rem;
+  -webkit-animation-name: moveInLeft;
+          animation-name: moveInLeft;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-timing-function: ease-out;
+          animation-timing-function: ease-out;
+}
+
+.heading-primary--sub {
+  display: block;
+  font-size: 2rem;
+  font-weight: 700;
+  letter-spacing: 1.75rem;
+  -webkit-animation: moveInRight 1s ease-out;
+          animation: moveInRight 1s ease-out;
+}
+
+.heading-secondary {
+  font-size:var(--font-size-large);
+  text-transform: uppercase;
+  font-weight: 700;
+  color: transparent;
+  margin-left: 100px;
+  letter-spacing: 0.2rem;
+  line-height: var(--line-height-large);
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  color:var(--secondary);
+
+animation-duration: 3s;
+animation-name: slide-in;
+animation-iteration-count: 3;
+animation-direction: alternate;
+}
+
+
+.btn, .btn:link, .btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 1.5rem 4rem;
+  display: inline-block;
+  border-radius: 0.5rem;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  position: relative;
+  font-size: 1.6rem;
+  border: none;
+  cursor: pointer;
+  -moz-transition: all 0.2s;
+  -ms-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  -webkit-border-radius:;
+  -moz-border-radius:;
+  -ms-border-radius:;
+  -o-border-radius:;
+}
+
+.btn:hover {
+          -webkit-transform: translateY(-3px);
+          transform: translateY(-3px);
+          -webkit-box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+          box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+          -moz-transform: translateY(-3px);
+          -ms-transform: translateY(-3px);
+          -o-transform: translateY(-3px);
+}
+
+.btn:hover::after {
+          -webkit-transform: scaleX(1.4) scaleY(1.6);
+          transform: scaleX(1.4) scaleY(1.6);
+          opacity: 0;
+          -moz-transform: scaleX(1.4) scaleY(1.6);
+          -ms-transform: scaleX(1.4) scaleY(1.6);
+          -o-transform: scaleX(1.4) scaleY(1.6);
+}
+
+.btn:active, .btn:focus {
+          outline: none;
+          -webkit-transform: translateY(-1px);
+          transform: translateY(-1px);
+          -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+          -moz-transform: translateY(-1px);
+          -ms-transform: translateY(-1px);
+          -o-transform: translateY(-1px);
+}
+
+.btn--white , .btn--green{
+  background-color: var(--secondary);
+  color: var(--background);
+}
+
+.btn--white::after {
+  background-color: var(--light);
+}
+
+.btn--green::after {
+  background-color: #55c57a;
+}
+
+
+/***********************section style***********************/
+.section-plans {
+  background-color: #000;
+  padding: 4rem 0 4rem 0;
+}
+/*****************card style***/
+/*****************nav style****/
+nav {
+  display: flex;
+  font-size: var(--font-size-medium);
+  font-weight: var(--font-weight-bold);
+  align-items: center;
+   padding: 10px 20px; /* Padding for the nav */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Subtle shadow */
+}
+
+.logo img {
+    border: 1px solid #000;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
     margin-top: 20px;
-  }
-  
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  
-  
-  .rt{
-       border: 1px solid var(--secondary);
-      border-radius: var(--border-raduis);
-       margin-top: 20px;
-
-  }
- 
-/**************Footer***********************/
-.footer .container{
-    max-width: 1170px;
-	margin:auto;
 }
-.footer .row{
-	display: flex;
-	flex-wrap: wrap;
+nav ul {
+  list-style-type: none; 
+  text-transform: uppercase;
+  display: flex; 
+  gap: 40px; 
+  margin-left: 30px;
+  margin-top: 20px;
+  animation-duration: 3s;
+  animation-name: slide-in;
+  animation-iteration-count:2;
+   padding: 0; 
+}
+nav ul li a{
+     color: var(--light);
+     text-decoration: none;
 
 }
-.footer{
-	background-color: var(--dark);
-    padding: 30px 0;
+
+nav ul li a:hover, nav ul li .active{
+  color: var(--secondary);
+
 }
-.footer-col{
-   width: 25%;
-   padding: 0 15px;
+
+
+
+.card {
+  -webkit-perspective: 150rem;
+          perspective: 150rem;
+  -moz-perspective: 150rem;
+  position: relative;
+  height:100vh;
 }
-.footer-col ul{
-    display: flex;
-    flex-direction: column;
-    
+
+.card__side {
+  height: 95vh;
+  transition: all 0.8s ease;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  border-radius: 5px;
+  overflow: hidden;
+  -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+
 }
-.footer-col h4{
-	font-size: 18px;
-	color: var(--light);
-	text-transform: capitalize;
-	margin-bottom: 35px;
-	font-weight: 500;
-	position: relative;
+
+.card__side--front {
+  background-color: var(--light);
 }
-.footer-col h4::before{
-	content: '';
-	position: absolute;
-	left:0;
-	bottom: -10px;
-	background-color: var(--primary);
-	height: 2px;
-	box-sizing: border-box;
-	width: 50px;
+
+.card__side--front-1 {
+  background: linear-gradient(-45deg, var(--secondary), var(--background));
+
 }
-.footer-col ul li:not(:last-child){
-	margin-bottom: 10px;
+
+.card__side--front-2 {
+  background: linear-gradient(-45deg, var(--secondary), var(--background));
+   
+
 }
-.footer-col ul li a{
-	font-size: var(--font-size-small);
-	text-transform: capitalize;
-	color: var(--light);
-	text-decoration: none;
-	font-weight: 300;
-	color: var(--secondary);
-	display: block;
-	transition: all 0.3s ease;
-	-webkit-transition: all 0.3s ease;
-	-moz-transition: all 0.3s ease;
-	-ms-transition: all 0.3s ease;
-	-o-transition: all 0.3s ease;
+
+.card__side--front-3 {
+  background: linear-gradient(-45deg, var(--secondary), var(--background));
+
 }
-.footer-col ul li a:hover{
-	color: #ffffff;
-	padding-left: 8px;
+
+.card__side--back {
+          transform: rotateY(180deg);
+          -webkit-transform: rotateY(180deg);
+          -moz-transform: rotateY(180deg);
+          -ms-transform: rotateY(180deg);
+          -o-transform: rotateY(180deg);
 }
-.footer-col .social-links a{
-	display: inline-block;
-	height: 40px;
-	width: 40px;
-	background-color: var(--secondary);
-	margin:0 10px 10px 0;
-	text-align: center;
-	line-height: 40px;
-	border-radius: 50%;
-	color: var(--light);
-	transition: all 0.5s ease;
-	-webkit-transition: all 0.5s ease;
-	-moz-transition: all 0.5s ease;
-	-ms-transition: all 0.5s ease;
-	-o-transition: all 0.5s ease;
+
+.card__side--back-1 {
+  background: linear-gradient(-45deg, var(--secondary), var(--primary));
 }
-.footer-col .social-links a:hover{
-	color: #24262b;
-	background-color: var(--light);
+
+.card__side--back-2 {
+  background: linear-gradient(-45deg, var(--secondary), var(--primary));
+
+}
+
+.card__side--back-3 {
+  background: linear-gradient(-45deg, var(--secondary), var(--primary));
+
+}
+
+.card:hover .card__side--front-1,
+.card:hover .card__side--front-2,
+.card:hover .card__side--front-3 {
+          -webkit-transform: rotateY(-180deg);
+          transform: rotateY(-180deg);
+          -moz-transform: rotateY(-180deg);
+          -ms-transform: rotateY(-180deg);
+          -o-transform: rotateY(-180deg);
+}
+
+.card:hover .card__side--back {
+          -webkit-transform: rotateY(0);
+          transform: rotateY(0);
+          -moz-transform: rotateY(0);
+          -ms-transform: rotateY(0);
+          -o-transform: rotateY(0);
+}
+
+.card__title {
+  height: 50vh;
+  padding: 0;
+  display: flex;
+   flex-direction: column;
+   text-align: center;
+   
+}
+.card__title img{
+  width:100%;
+  height: 40vh;
+}
+.img__title{
+  width: 100%;
+  height: 40vh;
+}
+.card__title p{
+  font-size: var(--font-size-medium);
+  
+}
+.card__heading {
+  font-size: var(--font-size-large);
+  font-weight: var(--font-weight-regular);
+  text-transform: uppercase;
+  width: 100%;
+}
+.card__details{
+  height: 50vh;
+  padding: 3rem;
+}
+.card__cta {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 90%;
+  text-align: center;
+}
+
+.card__price-box {
+  text-align: center;
+  color: var(--light);
+  margin-bottom: 8rem;
+}
+
+.card__price-only {
+  font-size: 1.4rem;
+  text-transform: uppercase;
+}
+
+.card__price-value {
+  font-size: 6rem;
+  font-weight: 100;
+}
+
+.row {
+  max-width: 114rem;
+  margin: 0 auto;
+}
+
+.row:not(:last-child) {
+  margin-bottom: 5rem;
+  margin-top: 5rem;
+}
+
+.row::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.row [class^="col-"] {
+  float: left;
+}
+
+.row [class^="col-"]:not(:last-child) {
+  margin-right: 6rem;
+}
+
+.row .col-1-of-3 {
+  width: calc((100% - 2 * 6rem) / 3);
+}
+
+
+
+@keyframes slide-in {
+  from {
+    translate: 150vw 0;
+    scale: 200% 2;
+  }
+
+  to {
+    translate: 0 0;
+    scale: 100% 1;
+  }
+}
+
+
+@keyframes slide-in {
+  from {
+    translate: 150vw 0;
+    scale: 200% 1;
+  }
+
+  to {
+    translate: 0 0;
+    scale: 100% 1;
+  }
 }
